Fixing spacing of buttons on step-3 of the multi-step-form

--- a/src/App.css
+++ b/src/App.css
@@ -170,3 +170,6 @@ input {
   align-items: start;
   padding: 1rem;
 }
+.step-3-sub-heading {
+  margin-bottom: 2.7rem;
+}
